# FlashView

./: .gitignore  CMakeLists.txt  ChangeLog  README.md
include/: App.h  MainFrame.h
resources/: FlashView.icns
src/: App.cpp  MainFrame.cpp
